# Physics

./: .gitignore  .gitmodules  .ignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Collisions_debugging.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  TODO.md  box_box.cpp  build.zig  build.zig.zon  compile_commands.json  prompt.md  shading_reference.md
.claude/agents/: numerical-methods-expert.md  physics-dynamics-professor.md  physics-engine-expert.md
.zed/: debug.json  tasks.json
bandura/include/: bandura.h  physics.h  pmath.h
bandura/src/: collision_detection.c  collision_resolution.c  math.c  physics.c  physics_debug.c  pmath.c  raycasts.c  shapes.c
bandura/tests/: tests.zig
core/: collision_detection.c  collisions.c  core.c  gizmos.c  main.c  physics.c  pmath.c
demos/: gizmos.c  main.c
demos/scenarios/: rigidbodies.c  vortex.c
include/: bandura.h  collisions.h  core.h  gizmos.h  physics.h  pmath.h  profiler.h  semaphores.h
lib/: collision_detection.c  collision_detection_gjk.c  collision_detection_old.apss  collision_log.c  collision_resolution.c  core.c  diagnostics.c  physics.c  physics_debug.c  pmath.c  raycasts.c
lib/include/: physics.h
profiler/: csv_file_monitor.c  labels.c  profiler.c  text_file_monitor.c
prompts/: camera.md  inspector.md
runner/: core.c  main.c  nuklear.c
runner/include/: core.h
runner/scenarios/: body_rain.c  compounds.c  rigidbodies.c
scenarios/: collisions.c  pendulum.c  rigidbodies.c  rope.c  spring.c
shaders/: lighting_fog.fs
src/: collision_detection.c  collision_resolution.c  physics.c  physics_debug.c  profiler.c  raycasts.c  shapes.c
tests/: runner.c  testing.h  tests.zig
